k8s/media-services/frames/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frames
  namespace: media-services
  labels:
    app: frames
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: frames
